--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    margin-top: 2rem;
+    text-align: center;
+    background-color: black;
+    color: white;
+    font-size: 1.5rem;
+}
